gcc/testsuite/g++.dg/cpp0x/defaulted57.C
@@ -11,12 +11,14 @@ struct S
 
 struct T
 {
-  T& operator=(volatile T &) = default; // { dg-error "defaulted" }
+  T& operator=(volatile T &) = default; // { dg-error "defaulted" "" { target c++17_down } }
+					// { dg-warning "implicitly deleted" "" { target c++20 } .-1 }
 };
 
 struct U
 {
-  U& operator=(const volatile U &) = default; // { dg-error "defaulted" }
+  U& operator=(const volatile U &) = default; // { dg-error "defaulted" "" { target c++17_down } }
+					      // { dg-warning "implicitly deleted" "" { target c++20 } .-1 }
 };
 
 struct V
