gcc/testsuite/g++.dg/cpp0x/defaulted59.C
@@ -8,5 +8,6 @@ struct M
 
 struct W : public M
 {
-  W(const W&) = default;
+  W(const W&) = default; // { dg-error "implicitly deleted" "" { target c++17_down } }
+			 // { dg-warning "implicitly deleted" "" { target c++20 } .-1 }
 };
